--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -34,6 +34,7 @@ menu:
   tags: /tags
   commonweal: /404.html
   about: /about
+  skill: /skill
 
 
 # Enable/Disable menu icons.
@@ -50,7 +51,7 @@ menu_icons:
   tags: tags
   archives: archive
   commonweal: heartbeat
-
+  skill: book
 
 
 
