--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-htmlclean": "^2.7.6",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^2.0.0",
-    "hexo": "^3.2.0",
+    "hexo": "^3.2.2",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
