编写es6模板，下一阶段学习es6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "kiyon-site",
+  "version": "1.1.1",
   "private": true,
   "hexo": {
     "version": "3.2.2"
