--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -11,7 +11,7 @@ keywords: "kiyonlin, kiyonl.in"
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
 # Set rss to specific value if you have burned your feed already.
-rss: 
+rss:
 
 # Specify the date when the site was setup
 since: 2013
@@ -362,7 +362,7 @@ fancybox: true
 # Be aware that you should use the same version as internal ones to avoid potential problems.
 vendors:
   # Internal path prefix. Please do not edit it.
-  _internal: vendors
+  _internal: lib
 
   # Internal version: 2.1.3
   jquery:
