--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://kiyonlin.coding.me/
+url: http://bsjsg.xyz/
 root: /
 permalink: :year-:month-:day-:title.html
 permalink_defaults:
