--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -414,3 +414,7 @@ images: images
 
 # Theme version
 version: 5.0.1
+
+reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
+wechatpay: /images/wpay.png
+alipay: /images/alipay.png
