--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "scripts": {
         "dev": "vuepress dev docs",
         "build": "vuepress build docs"
+    },
+    "dependencies": {
+        "ant-design-vue": "^1.0.2"
     }
 }
