--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "build": "vuepress build docs"
     },
     "dependencies": {
-        "ant-design-vue": "^1.0.2"
+        "ant-design-vue": "^1.0.2",
+        "tailwindcss": "^0.6.4"
     }
 }
